--- a/about.html
+++ b/about.html
@@ -45,19 +45,101 @@
 <div class="mblz">
     <img src="images/about.jpg" alt="">
 </div>
-<div class="text-center  biao">
-    <h3>
-        ABOUT US
-    </h3>
-    <p class="b-b clearfix">
+<div class="w1200">
+    <div class="text-center  biao">
+        <h3>
+            ABOUT US
+        </h3>
+        <p class="b-b clearfix">
             <span>
                 关于我们
             </span>
-    </p>
-    <p class="w75">
-        鼎诺塑胶是专业生产聚乙烯发泡材料的厂家，先后从韩国引进多条生产线及相关的深加工设备，独立研发了阻燃、抗菌防霉等系列产品。企业具有创新意识，不断开发新产品，专业和和产品质量获得业界的认可。
-    </p>
+        </p>
+
+    </div>
+    <h4 class="about-biao">
+        公司简介
+    </h4>
+    <div class="main-about clearfix mblb">
+        <div class="main-left pull-left">
+            <p>
+                鼎诺塑胶是专业生产聚乙烯发泡材料的厂家，主营产品：XPE和ePE发泡卷材，板材、及各种复合材料加工，目前有发泡生产线4条，其中xpe水平发泡生产线3条，epe发泡生产线1条，复合设备、覆膜设备4条，并有冲孔设备，增厚裁切加工设备，冲压模切设备、数控铣床加工等辅助设备。
+
+
+            </p>
+            <p>
+                特色产品有xpe、epe片材及其制品成型品，保温、防水和隔声吸音的材料及其成型品以及汽车内装/内饰品等。先后从韩国引进多条生产线及相关的深加工设备，独立研发了阻燃、抗菌防霉等系列产品。现拥有专业技术开发人员6名，高级工程师3名，外籍资深顾问1名，专门从事新材料及新领域应用的开发和推广。
+
+            </p>
+            <p>
+                企业具有创新意识，不断开发新产品，经过近多年的努力，已形成聚乙烯发泡系列产品，以及二次加工成型的系列产品，产品结构合理，应用广泛，主要用于土木建筑、汽车空调、保温隔热、电子电器、铁路交通、文化体育、产品包装、军工产品等国民经济各个领域，产品销售到全国各个地区的二十几个省市，同时还出口欧美等国家。专业和和产品质量获得业界的认可。 欢迎各界朋友莅临参观、指导和业务洽谈。
+
+            </p>
+        </div>
+        <div class="main-right pull-right">
+            <img src="images/about.png" alt="">
+        </div>
+    </div>
+    <div class="clearfix  about mblz">
+        <div class="clearfix">
+            <dl class="ball pull-left   " >
+                <dt>
+                    <img src="images/a1.png" alt="">
+                </dt>
+                <dd class="text-center">
+                    <h5>企业宗旨</h5>
+
+                    <span class="heng"></span>
+
+                    <p>
+                        质量第一
+                    </p>
+                    <p>
+                        客户至上
+                    </p>
+                </dd>
+            </dl>
+            <dl class="ball pull-left dl-middle   " >
+                <dt>
+                    <img src="images/a2.png" alt="">
+                </dt>
+                <dd class="text-center">
+                    <h5>企业使命</h5>
+
+                    <span class="heng"></span>
+
+                    <p>
+                        坚持全方位的创新驱动
+
+                    </p>
+                    <p>
+                        实现企业可持续发展
+                    </p>
+                </dd>
+            </dl>
+            <dl class="ball pull-left   " >
+                <dt>
+                    <img src="images/a3.png" alt="">
+                </dt>
+                <dd class="text-center">
+                    <h5>经营理念</h5>
+
+                    <span class="heng"></span>
+
+                    <p>
+                        以质量求生存
+
+                    </p>
+                    <p>
+                        以信誉求发展
+                    </p>
+                </dd>
+            </dl>
+
+        </div>
+    </div>
 </div>
+
 <!--footer-->
 <div class="footer">
     <div class="w1200">
