--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     </div>
 </div>
 <!--about-->
-<div class="about">
+<div class="about bg">
    <div class="w1200 common">
        <div class="text-center  biao">
            <h3 >
