--- a/news.html
+++ b/news.html
@@ -7,11 +7,230 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
+
 </head>
 <body>
+<!--头-->
+<div class="w1200">
+    <div class="nav clearfix">
+        <div class="pull-left">
+            <a href="javascript:;">
+                <img src="images/logo.png" alt="">
+            </a>
+        </div>
+        <div class="pull-right">
+            <a href="index.html">
+                首页
+            </a>
+            <a href="about.html">
+                关于我们
+            </a>
+            <a href="product.html">
+                产品中心
+            </a>
+            <a class="on" href="news.html">
+                新闻动态
+            </a>
+            <a href="honor.html">
+                荣誉资质
+            </a>
+            <a href="contact.html">
+                联系我们
+            </a>
+        </div>
+    </div>
+</div>
+<div class="mblz">
+    <img src="images/news.png" alt="">
+</div>
+<div class="w1200">
+        <div class="text-center biao ">
+            <h3>
+                NEWS  INFORMATION
+            </h3>
+            <p class="b-b ">
+                <span>
+                    新闻资讯
+                </span>
+            </p>
+        </div>
+        <div class="new">
+            <div class="clearfix ">
+                <div class="new-left pull-left">
+                    <img src="images/c1.png" alt="">
+                </div>
+                <div class="new-right pull-right text-left">
+                    <h4 class="pt pbb-s">
+                        隔音垫多少钱一平方？
+                    </h4>
+                    <h4 class="">
+                        2017-05-10
+                    </h4>
+                    <p class="text-muted pb">
+                        有很多朋友经常询问隔音产品多少钱一平米？对于这种问题，我也不知道怎么回答，很明确的一个问题，材质不一样，价格也不一样；规格不一样，价格也不一样......
+                    </p>
+                    <p class="pt">
+                        <a class="news-btn" href="javascript:;">
+                            查看详情
+                        </a>
+                    </p>
+
+                </div>
+            </div>
+           <dl class="clearfix bb">
+               <dt class="pull-left">
+                   <h4>  7</h4>
+
+
+                   <div>2017-05 </div>
+               </dt>
+               <dd class="pull-right text-left">
+                   <h6>
+                       爬行垫什么材质的好
+                   </h6>
+                   <p>
+                       2月23日，河南省开仑化工有限责任公司投资3000多万元建设的国内首座万吨级硫化促进剂 M生产装置，经过近5个月的...
+                   </p>
+               </dd>
+           </dl>
+            <dl class="clearfix bb">
+                <dt class="pull-left">
+                <h4>  7</h4>
+
+
+                <div>2017-05 </div>
+                </dt>
+                <dd class="pull-right text-left">
+                    <h6>
+                        爬行垫什么材质的好
+                    </h6>
+                    <p>
+                        2月23日，河南省开仑化工有限责任公司投资3000多万元建设的国内首座万吨级硫化促进剂 M生产装置，经过近5个月的...
+                    </p>
+                </dd>
+            </dl>
+            <dl class="clearfix bb">
+                <dt class="pull-left">
+                <h4>  7</h4>
+
+
+                <div>2017-05 </div>
+                </dt>
+                <dd class="pull-right text-left">
+                    <h6>
+                        爬行垫什么材质的好
+                    </h6>
+                    <p>
+                        2月23日，河南省开仑化工有限责任公司投资3000多万元建设的国内首座万吨级硫化促进剂 M生产装置，经过近5个月的...
+                    </p>
+                </dd>
+            </dl>
+            <dl class="clearfix bb">
+                <dt class="pull-left">
+                <h4>  7</h4>
+
+
+                <div>2017-05 </div>
+                </dt>
+                <dd class="pull-right text-left">
+                    <h6>
+                        爬行垫什么材质的好
+                    </h6>
+                    <p>
+                        2月23日，河南省开仑化工有限责任公司投资3000多万元建设的国内首座万吨级硫化促进剂 M生产装置，经过近5个月的...
+                    </p>
+                </dd>
+            </dl>
+        </div>
+        <div class="text-center common-pagation">
+            <ul class="pagination">
+                <li><a class="on" href="javascript:;">1</a></li>
+                <li><a href="javascript:;">2</a></li>
+                <li><a href="javascript:;">3</a></li>
+                <li><a href="javascript:;">4</a></li>
+                <li><a href="javascript:;">....</a></li>
+                <li><a href="javascript:;">下一页</a></li>
+            </ul>
+        </div>
+
+</div>
+<!--footer-->
+<div class="footer">
+    <div class="w1200">
+        <div class="footer-top clearfix">
+            <div class="f-left text-right">
+                <div class="f-l">
+
+                    CONTACT US
+                </div>
+                <div class="we">
+                    联系我们
+                </div>
+            </div>
+            <div class="f-right clearfix">
+                <div class="f-area">
+                    <p>
+                        地址：
+
+                    </p>
+                    <p>
+                        河北省雄安县区开发区
+                    </p>
+                </div>
+                <div class="f-area">
+                    <p>
+                        张经理
+
+
+                    </p>
+                    <p>
+                        电话： 13385446633
+                    </p>
+                    <p>
+                        QQ ： 1342818174
+                    </p>
+                </div>
+
+                <div class="f-area">
+                    <p>
+
+                        梁经理
+
+
+
+                    </p>
+                    <p>
+                        电话： 13720042869
+                    </p>
+                    <p>
+                        QQ ： 1938689970
+                    </p>
+                </div>
+                <div class="f-area">
+                    <p>
+
+
+                        荣经理
+
+                    </p>
+                    <p>
+                        电话： 18765554665
+                    </p>
+                    <p>
+                        QQ ： 361627786
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="foot-bot text-center">
+            鼎诺塑胶制品有公司©2017版权所有      技术支持：圣尊科技
+        </div>
+    </div>
+</div>
 <script src="js/jquery.min.js"></script>
 </body>
 </html>
