--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,188 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
+<!--tou-->
+<div class="w1200">
+    <div class="nav clearfix">
+        <div class="pull-left">
+            <a href="javascript:;">
+                <img src="images/logo.png" alt="">
+            </a>
+        </div>
+        <div class="pull-right">
+            <a  href="index.html">
+                首页
+            </a>
+            <a  href="about.html">
+                关于我们
+            </a>
+            <a  href="product.html">
+                产品中心
+            </a>
+            <a   href="news.html">
+                新闻动态
+            </a>
+            <a  href="honor.html">
+                荣誉资质
+            </a>
+            <a class="on"  href="contact.html">
+                联系我们
+            </a>
+        </div>
+    </div>
+</div>
+<div class="mblz">
+    <img src="images/lian.png" alt="">
+</div>
+<div class="w1200 pbb">
+    <div class="text-center  biao">
+        <h3>
+           CONTACT US
+        </h3>
+        <p class="b-b clearfix">
+            <span>
+                联系我们
+            </span>
+        </p>
+
+    </div>
+    <div class="clearfix">
+        <div class="pull-left contact-left">
+            <h4 class="about-biao">
+                联系方式
+            </h4>
+            <p class="pl mb-s">
+                如有任何问题请联系我们，我们7*24小时竭诚为您服务
+            </p>
+            <div class="pl clearfix">
+                <div class="pull-left">
+                    <img src="images/l1.png" alt="">
+                </div>
+                <div class="pull-right main-contact-right ">
+                    <div class="ren">
+                        <p> 张经理  </p>
+                        <p>电话： 13385446633</p>
+                        <p>QQ ： 1342818174</p>
+                    </div>
+                    <div class="ren last">
+                        <p> 梁经理  </p>
+
+
+                        <p> 电话： 13720042869</p>
+                        <p>QQ ： 1938689970</p>
+                    </div>
+                    <div class="ren">
+                        <p> 荣经理  </p>
+
+
+                        <p>  电话： 18765554665</p>
+                        <p>QQ ： 361627786</p>
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="pl clearfix">
+                <div class="pull-left">
+                    <img src="images/l2.png" alt="">
+                </div>
+                <div class="pull-right main-contact-right ">
+                   <p>
+                       地址：
+
+                   </p>
+                    <p>
+                        河北雄安县区开发区
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="pull-right contact-right">
+            <img src="images/addressNow.png" alt="">
+        </div>
+    </div>
+
+</div>
+<!--footer-->
+<div class="footer">
+    <div class="w1200">
+        <div class="footer-top clearfix">
+            <div class="f-left text-right">
+                <div class="f-l">
+
+                    CONTACT US
+                </div>
+                <div class="we">
+                    联系我们
+                </div>
+            </div>
+            <div class="f-right clearfix">
+                <div class="f-area">
+                    <p>
+                        地址：
+
+                    </p>
+                    <p>
+                        河北省雄安县区开发区
+                    </p>
+                </div>
+                <div class="f-area">
+                    <p>
+                        张经理
+
+
+                    </p>
+                    <p>
+                        电话： 13385446633
+                    </p>
+                    <p>
+                        QQ ： 1342818174
+                    </p>
+                </div>
+
+                <div class="f-area">
+                    <p>
+
+                        梁经理
+
+
+
+                    </p>
+                    <p>
+                        电话： 13720042869
+                    </p>
+                    <p>
+                        QQ ： 1938689970
+                    </p>
+                </div>
+                <div class="f-area">
+                    <p>
+
+
+                        荣经理
+
+                    </p>
+                    <p>
+                        电话： 18765554665
+                    </p>
+                    <p>
+                        QQ ： 361627786
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="foot-bot text-center">
+            鼎诺塑胶制品有公司©2017版权所有      技术支持：圣尊科技
+        </div>
+    </div>
+</div>
 <script src="js/jquery.min.js"></script>
 </body>
 </html>
