--- a/product.html
+++ b/product.html
@@ -7,11 +7,239 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.css">
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
     <link rel="stylesheet" href="css/common.css">
 </head>
 <body>
+<!--tou-->
+<div class="w1200">
+    <div class="nav clearfix">
+        <div class="pull-left">
+            <a href="javascript:;">
+                <img src="images/logo.png" alt="">
+            </a>
+        </div>
+        <div class="pull-right">
+            <a  href="index.html">
+                首页
+            </a>
+            <a  href="about.html">
+                关于我们
+            </a>
+            <a class="on" href="product.html">
+                产品中心
+            </a>
+            <a  href="news.html">
+                新闻动态
+            </a>
+            <a  href="honor.html">
+                荣誉资质
+            </a>
+            <a  href="contact.html">
+                联系我们
+            </a>
+        </div>
+    </div>
+</div>
+<div class="mblz">
+    <img src="images/prodect.png" alt="">
+</div>
+<div class="nav-info">
+    <div class="w1200 clearfix">
+        <dl class="wow rollIn animated" style="visibility: visible; animation-name: rollIn;">
+            <dt>
+                <i class="iconfont icon-yuqie"></i>
+            </dt>
+            <dd>
+                <p>
+                    垫类用品
+                </p>
+                <p class="ying">
+                    Mat kind things
+                </p>
+            </dd>
+        </dl>
+        <dl class="wow rollIn animated" style="visibility: visible; animation-name: rollIn;">
+            <dt>
+                <i class="iconfont icon-m-jianzhu"></i>
+            </dt>
+            <dd>
+                <p>
+                    建筑用品
+                </p>
+                <p class="ying">
+                    Building supplies
+                </p>
+            </dd>
+        </dl>
+        <dl class="wow bounceInDown animated" style="visibility: visible; animation-name: bounceInDown;">
+            <dt>
+                <i class="iconfont icon-guofangjungong"></i>
+            </dt>
+            <dd>
+                <p>
+                    军工用品
+                </p>
+                <p class="ying">
+                    Military supplies
+                </p>
+            </dd>
+        </dl>
+        <dl class="wow lightSpeedIn animated" style="visibility: visible; animation-name: lightSpeedIn;">
+            <dt>
+                <i class="iconfont icon-go"></i>
+            </dt>
+            <dd>
+                <p>
+                    汽车空调类用品
+                </p>
+                <p class="ying">
+                    Car air-conditioner
+                </p>
+            </dd>
+        </dl>
+        <dl class="wow lightSpeedIn animated" style="visibility: visible; animation-name: lightSpeedIn;">
+            <dt>
+                <i class="iconfont icon-caoping"></i>
+            </dt>
+            <dd>
+                <p>
+                    人造草坪垫
+                </p>
+                <p class="ying">
+                    Fake grass mat
+                </p>
+            </dd>
+        </dl>
+    </div>
+</div>
+<div class="w1200">
+    <div class="clearfix main-product">
+        <dl class="pull-left">
+            <dt class="ball">
+                <img src="images/p01.png" alt="">
+            </dt>
+            <dd class="text-center">鼎诺瑜伽垫</dd>
+        </dl>
+        <dl class="pull-left">
+            <dt class="ball">
+                <img src="images/p01.png" alt="">
+            </dt>
+            <dd class="text-center">鼎诺瑜伽垫</dd>
+        </dl>
+        <dl class="pull-left">
+            <dt class="ball">
+                <img src="images/p01.png" alt="">
+            </dt>
+            <dd class="text-center">鼎诺瑜伽垫</dd>
+        </dl>
+        <dl class="pull-left last">
+            <dt class="ball">
+                <img src="images/p01.png" alt="">
+            </dt>
+            <dd class="text-center">鼎诺瑜伽垫</dd>
+        </dl>
+        <dl class="pull-left">
+            <dt class="ball">
+                <img src="images/p01.png" alt="">
+            </dt>
+            <dd class="text-center">鼎诺瑜伽垫</dd>
+        </dl>
+        <dl class="pull-left">
+            <dt class="ball">
+                <img src="images/p01.png" alt="">
+            </dt>
+            <dd class="text-center">鼎诺瑜伽垫</dd>
+        </dl>
+
+    </div>
+    <div class="text-center common-pagation">
+        <ul class="pagination">
+            <li><a class="on" href="javascript:;">1</a></li>
+            <li><a href="javascript:;">2</a></li>
+            <li><a href="javascript:;">3</a></li>
+            <li><a href="javascript:;">4</a></li>
+            <li><a href="javascript:;">....</a></li>
+            <li><a href="javascript:;">下一页</a></li>
+        </ul>
+    </div>
+</div>
+<!--footer-->
+<div class="footer">
+    <div class="w1200">
+        <div class="footer-top clearfix">
+            <div class="f-left text-right">
+                <div class="f-l">
+
+                    CONTACT US
+                </div>
+                <div class="we">
+                    联系我们
+                </div>
+            </div>
+            <div class="f-right clearfix">
+                <div class="f-area">
+                    <p>
+                        地址：
+
+                    </p>
+                    <p>
+                        河北省雄安县区开发区
+                    </p>
+                </div>
+                <div class="f-area">
+                    <p>
+                        张经理
+
+
+                    </p>
+                    <p>
+                        电话： 13385446633
+                    </p>
+                    <p>
+                        QQ ： 1342818174
+                    </p>
+                </div>
+
+                <div class="f-area">
+                    <p>
+
+                        梁经理
+
+
+
+                    </p>
+                    <p>
+                        电话： 13720042869
+                    </p>
+                    <p>
+                        QQ ： 1938689970
+                    </p>
+                </div>
+                <div class="f-area">
+                    <p>
+
+
+                        荣经理
+
+                    </p>
+                    <p>
+                        电话： 18765554665
+                    </p>
+                    <p>
+                        QQ ： 361627786
+                    </p>
+                </div>
+
+            </div>
+        </div>
+        <div class="foot-bot text-center">
+            鼎诺塑胶制品有公司©2017版权所有      技术支持：圣尊科技
+        </div>
+    </div>
+</div>
+
 <script src="js/jquery.min.js"></script>
 </body>
 </html>
