--- a/about.html
+++ b/about.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
     <link rel="stylesheet" href="css/common.css">
+    <!--[if lt IE9] >
+      <script type="text/javascript" src="js/html5.js"></script>
+      <script type="text/javascript" src="js/respond.min.js"></script>
+      <![endif]-->
 </head>
 <body>
 <!--tou-->
