--- a/news-page.html
+++ b/news-page.html
@@ -7,16 +7,16 @@
     <link rel="stylesheet" href="css/owl.carousel.css">
     <link rel="stylesheet" href="css/owl.theme.css">
     <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
-    <link rel="stylesheet" href="css/common.css">
     <!--[if lt IE9] >
-      <script type="text/javascript" src="js/html5.js"></script>
-      <script type="text/javascript" src="js/respond.min.js"></script>
-      <![endif]-->
+          <script type="text/javascript" src="js/html5.js"></script>
+          <script type="text/javascript" src="js/respond.min.js"></script>
+          <![endif]-->
 </head>
 <body>
-<!--tou-->
+<!--头-->
 <div class="w1200">
     <div class="nav clearfix">
         <div class="pull-left">
@@ -25,99 +25,69 @@
             </a>
         </div>
         <div class="pull-right">
-            <a  href="index.html">
+            <a href="index.html">
                 首页
             </a>
-            <a  href="about.html">
+            <a href="about.html">
                 关于我们
             </a>
-            <a  href="product.html">
+            <a href="product.html">
                 产品中心
             </a>
-            <a   href="news.html">
+            <a class="on" href="news.html">
                 新闻动态
             </a>
-            <a  href="honor.html">
+            <a href="honor.html">
                 荣誉资质
             </a>
-            <a class="on"  href="contact.html">
+            <a href="contact.html">
                 联系我们
             </a>
         </div>
     </div>
 </div>
 <div class="mblz">
-    <img src="images/lian.png" alt="">
+    <img src="images/news.png" alt="">
 </div>
-<div class="w1200 pbb">
-    <div class="text-center  biao">
-        <h3>
-           CONTACT US
-        </h3>
-        <p class="b-b clearfix">
-            <span>
-                联系我们
-            </span>
-        </p>
-
-    </div>
-    <div class="clearfix">
-        <div class="pull-left contact-left">
-            <h4 class="about-biao">
-                联系方式
+<div class="w1200">
+    <div class="new-title text-center">
+            <h4 >
+                工业用橡胶板分类简介
             </h4>
-            <p class="pl mb-s">
-                如有任何问题请联系我们，我们7*24小时竭诚为您服务
+            <p class=" text-muted pbb">
+                时间：2017-05-10
             </p>
-            <div class="pl clearfix">
-                <div class="pull-left">
-                    <img src="images/l1.png" alt="">
-                </div>
-                <div class="pull-right main-contact-right ">
-                    <div class="ren">
-                        <p> 张经理  </p>
-                        <p>电话： 13385446633</p>
-                        <p>QQ ： 1342818174</p>
-                    </div>
-                    <div class="ren last">
-                        <p> 梁经理  </p>
 
-
-                        <p> 电话： 13720042869</p>
-                        <p>QQ ： 1938689970</p>
-                    </div>
-                    <div class="ren">
-                        <p> 荣经理  </p>
-
-
-                        <p>  电话： 18765554665</p>
-                        <p>QQ ： 361627786</p>
+            <p class="pb">
+                今年3月份，香港消费者委员会发布调查报告，近三成可微波炉加热的塑料饭盒会释放塑化剂。这也意味着，塑料容器制品有一个保质期限，过期后就会老化。另外，PET材质的塑料瓶中之前曾被曝出含致癌物--重金属锑，而PET材质目前是饮品中使用最多的包材。就算产品达标，超期使用易增加锑对人体的潜在风险。
 
 
 
-                    </div>
-                </div>
-            </div>
-            <div class="pl clearfix">
-                <div class="pull-left">
-                    <img src="images/l2.png" alt="">
-                </div>
-                <div class="pull-right main-contact-right ">
-                   <p>
-                       地址：
+            </p>
+        <p class="pb">
+                现状塑料水杯用几年常见?
+                近日，小编就此随机采访了20多位市民，没有一位市民能说出塑料容器制品的保质期限。而在调查中，常见的食品级塑料制品，用三四年甚至更久的情况较为普遍。
+                “只听说标注生产日期，保质期一直没听说过。”探访中，部分塑料制品的销售商家拿了几样产品给记者看，无论是水杯还是脸盆，均没有保质期限。
+                随后，记者根据一款塑料水杯上的联系方式，联系生产厂家，工作人员答复，目前国家只是要求标注材料、用途、生产日期、注意事项等，并无保质期一项。
+                在市区超市等购物场所，当记者咨询塑料制品能使用多长时间时，多数导购员给的答复是:“用坏了就换一个，用不坏就继续用，我们还真不知道它能用多久。”
 
-                   </p>
-                    <p>
-                        河北雄安县区开发区
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="pull-right contact-right">
-            <img src="images/addressNow.png" alt="">
+            </p>
+        <p class="pb">
+            提醒频繁用建议两年一换
+            一个塑料制品的保质期限到底有多久?专家表示，塑料制品的使用情况和清洗方法不同，对塑料制品的“寿命”有一定的影响，尽管目前没有明文规定哪一种材质的塑料保质期限是多少，但业界有一个大概的说法，大多数塑料制品的保质期在三至五年。
+        </p>
+        <div class="pbb">
+            <img src="images/c1.png" alt="">
         </div>
     </div>
-
+    <div class="pbb">
+        <p>
+            <a href="javascript:;">上一篇：工业用橡胶板分类简介  工业用橡胶板分类简介 </a>
+        </p>
+        <p>
+            <a href="javascript:;">下一篇：工业用橡胶板分类简介  工业用橡胶板分类简介   </a>
+        </p>
+    </div>
 </div>
 <!--footer-->
 <div class="footer">
