--- a/news.html
+++ b/news.html
@@ -10,7 +10,10 @@
     <link rel="stylesheet" href="css/common.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_pmmapfje9oogvi.css">
-
+    <!--[if lt IE9] >
+          <script type="text/javascript" src="js/html5.js"></script>
+          <script type="text/javascript" src="js/respond.min.js"></script>
+          <![endif]-->
 </head>
 <body>
 <!--头-->
@@ -73,7 +76,7 @@
                         有很多朋友经常询问隔音产品多少钱一平米？对于这种问题，我也不知道怎么回答，很明确的一个问题，材质不一样，价格也不一样；规格不一样，价格也不一样......
                     </p>
                     <p class="pt">
-                        <a class="news-btn" href="javascript:;">
+                        <a class="news-btn" href="./news-page.html">
                             查看详情
                         </a>
                     </p>
